// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Imperative Secure Tests Imperative Test CLI Secure Tests imperative-test-cli config list should list the configuration 1`] = `
"profiles: 
  secured: 
    type:       secured
    properties: 
      info: 
    secure: 
      (empty array)
  project_base: 
    type:       base
    properties: 
    secure: 
      - secret
      - undefined
  global_base: 
    type:       base
    properties: 
    secure: 
      - secret
      - undefined
defaults: 
  secured: secured
  base:    project_base
autoStore: true
"
`;

exports[`Imperative Secure Tests Imperative Test CLI Secure Tests imperative-test-cli config list should list the configuration without showing secure values 1`] = `
"profiles: 
  secured: 
    type:       secured
    properties: 
      info: 
    secure: 
      (empty array)
  project_base: 
    type:       base
    properties: 
      secret: (secure value)
    secure: 
      - secret
      - undefined
  global_base: 
    type:       base
    properties: 
    secure: 
      - secret
      - undefined
defaults: 
  secured: secured
  base:    project_base
autoStore: true
"
`;

exports[`Imperative Secure Tests Imperative Test CLI Secure Tests imperative-test-cli config list should list the defaults configuration property 1`] = `
"secured: secured
base:    project_base
"
`;

exports[`Imperative Secure Tests Imperative Test CLI Secure Tests imperative-test-cli config list should list the profiles configuration property 1`] = `
"secured: 
  type:       secured
  properties: 
    info: 
  secure: 
    (empty array)
project_base: 
  type:       base
  properties: 
  secure: 
    - secret
    - undefined
global_base: 
  type:       base
  properties: 
  secure: 
    - secret
    - undefined
"
`;

exports[`Imperative Secure Tests Imperative Test CLI Secure Tests imperative-test-cli config list should list the root level property names only 1 1`] = `
"profiles
defaults
autoStore
"
`;

exports[`Imperative Secure Tests Imperative Test CLI Secure Tests imperative-test-cli config list should list the root level property names only 2 1`] = `
"profiles
defaults
autoStore
"
`;

exports[`Imperative Secure Tests Imperative Test CLI Secure Tests imperative-test-cli config profiles should list profiles 1`] = `
"secured
project_base
global_base
"
`;
